--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        
+        <ol>
+            <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+
+        </ol>
     </body>
 </html>
