Made some advances in my very first web page

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
     <head>
         <title>odin-recipes</title>
+        <link href="./index-styles.css" rel="stylesheet">
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <ol>
             <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-
+            <li><a href="./recipes/meatballs.html">Meat Balls Recipe</a></li>
+            <li><a href="./recipes/spaghetti.html">Spaghetti Recipe</a></li>
         </ol>
     </body>
 </html>
