--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>lasagna recipes</title>
+        <link rel="stylesheet" href="./../recipe-styles.css">
     </head>
     <body>
         <h1>Lasagna</h1>
